fixed logout button layout bug

--- a/src/less/index.less
+++ b/src/less/index.less
@@ -96,6 +96,9 @@ section.minified #contactWrapper, section.minified #roomWrapper, section.minifie
 	display:none;
 }
 
+#logout {
+    z-index: 2;
+}
 
 
 section#left_sidebar h1 {
